# barkingpig

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
knowledge/: user_preference.txt
src/barkingpig/: app.py  main.py  requirements.txt  run_pipeline.py  scheduled_pipeline.py  social_posting.py  topics.txt
src/barkingpig/config/: agents.yaml  tasks.yaml
src/barkingpig/outputs/: Enabling_data_integrity_and_secure_communication_in_adversarial_conditions_through_Web3,_Blockchain_and_the_army_in_Sub_Saharan_Africa.md  Frontline_states_in_Web3_and_Blockchain_tech_in_Sub_Saharan_Africa.md  Last_call_Web3_technology_in_Sub_Saharan_Africa.md  Moving_the_masses,_Web3_technology_in_Sub_Saharan_Africa.md  Web3_tech_in_farming.md
